[package]
name = "eigen-testing-utils"
description = "Testing utils for eigen."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
alloy-primitives.workspace = true
alloy-provider.workspace = true
alloy-rpc-types.workspace = true
alloy-transport.workspace = true
alloy-signer-local.workspace  = true
eigen-utils.workspace = true
alloy.workspace = true
serde.workspace = true
serde_json.workspace = true
testcontainers.workspace = true
url.workspace = true
eyre.workspace = true
