[package]
name = "eigen-testing-utils"
description = "Testing utils for eigen."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
alloy.workspace = true
eigen-common.workspace = true
eigen-utils.workspace = true
serde.workspace = true
serde_json.workspace = true
testcontainers.workspace = true
url.workspace = true
