[package]
name = "eigen-chainio-txmanager"
description = "Eigen Layer Tx Manager"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
alloy.workspace = true
eigen-logging.workspace = true
eigen-signer.workspace = true
k256.workspace = true
reqwest.workspace = true
thiserror.workspace = true

[dev-dependencies]
alloy-primitives.workspace = true
alloy-consensus.workspace = true
alloy-node-bindings.workspace = true
once_cell.workspace = true
tokio.workspace = true
