[package]
name = "eigen-chainio-txmanager"
description = "Eigen Layer Tx Manager"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
alloy.workspace = true
eigen-logging.workspace = true
eigen-signer.workspace = true
reqwest.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
eigen-testing-utils.workspace = true
once_cell.workspace = true
