[package]
name = "eigensdk-txmgr"
description = "EigenSDK TxMgr"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
ethers.workspace = true
eigensdk-client-wallet.workspace = true
eigensdk-signerv2.workspace = true
thiserror.workspace = true