[package]
name = "eigensdk-chainio-utils"
description = "Eigen Layer utils"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
ethers.workspace = true
ark-bn254 = "0.4.0"
ark-ff.workspace = true
eigensdk-contract-bindings.workspace = true
eigensdk-crypto-bls.workspace = true
eigensdk-crypto-bn254.workspace = true
alloy-sol-types.workspace = true
alloy-contract.workspace = true