[package]
name = "eigen-chainio-utils"
description = "Eigen Layer utils"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
ark-bn254 = "0.4.0"
ark-ff.workspace = true
eigen-contract-bindings.workspace = true
eigen-crypto-bls.workspace = true
eigen-crypto-bn254.workspace = true
alloy-sol-types.workspace = true
alloy-contract.workspace = true