[package]
name = "eigen-chainio-utils"
description = "Eigen Layer utils"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
ark-bn254 = "0.4.0"
ark-ff.workspace = true
eigen-contract-bindings.workspace = true
eigen-crypto-bls.workspace = true
eigen-crypto-bn254.workspace = true
alloy-sol-types.workspace = true
alloy-contract.workspace = true
eigen-utils.workspace = true
ark-std = { version = "0.4.0", default-features = false }
ark-ec = { version = "0.4.2", default-features = false }
alloy-primitives.workspace = true