[package]
name = "eigen-crypto-bls"
description = "Eigen layer bls utilities"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
alloy-primitives.workspace = true
ark-bn254.workspace = true
ark-ec.workspace = true
ark-ff.workspace = true
ark-std = { version = "0.4.0", default-features = false }
eigen-crypto-bn254.workspace = true
eigen-utils.workspace = true
thiserror.workspace = true
[dev-dependencies]
rand = "0.8.4"
tokio = { workspace = true, features = ["full"] }
