[package]
name = "eigen-crypto-bn254"
description = "Eigen layer SDK bn254 utilities"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
ark-ff.workspace = true
ark-bn254 = "0.4.0"
thiserror.workspace = true
alloy-primitives.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
rand = "0.8.4"
