[package]
name = "eigen-crypto-bn254"
description = "Eigen layer SDK bn254 utilities"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
ark-bn254.workspace = true
ark-ec.workspace = true
ark-ff.workspace = true
num-bigint = "0.4.4"
rust-bls-bn254.workspace = true


[dev-dependencies]
rand = "0.8.4"
tokio = { workspace = true, features = ["full"] }
