[package]
name = "eigen-crypto-bn254"
description = "Eigen layer SDK bn254 utilities"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
ark-bn254.workspace = true
ark-ec.workspace = true
ark-ff.workspace = true
num-bigint.workspace = true
rust-bls-bn254.workspace = true


[dev-dependencies]
rand.workspace = true
tokio = { workspace = true, features = ["full"] }
