[package]
name = "eigen-crypto-keystore"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
aes = "0.8.0"
ark-ec = "0.4.2"
ark-ff = { version = "0.4.2", features = ["std"] }
ctr = "0.9.0"
eth-keystore = "0.5.0"
ethers = { version = "2.0", features = ["rustls", "ws"] }
eyre = "0.6.8"
rand = "0.8.5"
scrypt = "0.10.0"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = { version = "1.0.85" }
eigen-crypto-bls.workspace = true

